@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.3-05
-Date: 2010-6-28
+Version: 1.3-06
+Date: 2010-9-24
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
